Fixed nav appearance on firefox appearing bigger and misaligned

--- a/static/styles/nav.css
+++ b/static/styles/nav.css
@@ -22,6 +22,7 @@ nav > ul > li > p {
 }
 nav > ul > li > img {
     filter: brightness(0);
+    height: 100%;
 }
 nav > ul > li:hover > img, nav > ul > li.active > img {
     filter: brightness(1);
@@ -74,6 +75,7 @@ body:has(nav.active) #bits-display {
     }
     nav > ul > li {
         display: flex;
+        align-items: center;
         gap: 1rem;
         margin-right: 1rem;
         border-radius: 12px;
